# hdf5r

./: CMakeLists.txt  LICENSE.txt
cmake/: CMakeLists.txt  cpack_options.cmake.in  hdf5r_utils.cmake
examples/: CMakeLists.txt  example.cpp
include/hdf5r/: hdf5r.h
src/: CMakeLists.txt  hdf5r.cpp
